se agrega el proyecto

--- a/aseo-index.html
+++ b/aseo-index.html
@@ -32,6 +32,8 @@
                     <li><a href="panaderia-index.html">Panaderia</a></li>
                     <li><a href="papeleria-index.html">Papelería</a></li>
                     <button id="logout">Cerrar Sesión</button>
+
+
                 </ul>
             </nav>
             <div class="container-icon">
@@ -45,10 +47,9 @@
                                 <p class="titulo-producto-carrito">Mini marker</p><span class="precio-producto-carrito">$80</span></div><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" /></svg></div>
                     </div>
                     <div class="cart-total hidden">
-                        <h3>Total:</h3><span class="total-pagar">$200</span>
-                        <button class="btn-primary" id="checkout-btn">Ir a pagar</button>
+                        <h3>Total:</h3><span class="total-pagar">$200</span></div>                                      
+                        <p class="cart-empty">El carrito está vacío</p>
                     </div>
-                    <p class="cart-empty">El carrito está vacío</p>
                 </div>
             </div>
         </div>
@@ -58,57 +59,49 @@
             <figure><img src="images/esponja lavaloza.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Esponja Matrix Suave 2und</h2>
-                <p class="price">$ 2000</p><button class="btn-add-cart" data-title="Esponja Matrix Suave 2und" data-price="2000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 2000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/esponja matrix.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Esponja matrix und</h2>
-                <p class="price">$ 1000</p><button class="btn-add-cart" data-title="Esponja matrix und" data-price="1000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 1000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/jabon ariel.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Jabon Ariel En Polvo 5000gr</h2>
-                <p class="price">$ 45000</p><button class="btn-add-cart" data-title="Jabon Ariel En Polvo 5000gr" data-price="45000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 45000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/jabon barra cuerpo.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Jabon Barra Para El Cuerpo 3und Jonsons</h2>
-                <p class="price">$ 10000</p><button class="btn-add-cart" data-title="Jabon Barra Para El Cuerpo 3und Jonsons" data-price="10000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 10000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/jabon barra.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Jabon Barra FAB Mulitiusos und</h2>
-                <p class="price">$ 2500</p><button class="btn-add-cart" data-title="Jabon Barra FAB Mulitiusos und" data-price="2500">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 2500</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/jabon lavaloza.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Jabon Liquido Lavaloza Axion</h2>
-                <p class="price">$ 5000</p><button class="btn-add-cart" data-title="Jabon Liquido Lavaloza Axion" data-price="5000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 5000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/jabon liquido manos.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Jabon Liquido Para Manos Palmolive 500ml</h2>
-                <p class="price">$ 13000</p><button class="btn-add-cart" data-title="Jabon Liquido Para Manos Palmolive 500ml" data-price="13000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 13000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
         <div class="item">
             <figure><img src="images/limpido.PNG" alt="producto" /></figure>
             <div class="info-product">
                 <h2>Limpido Multiusos 3lt</h2>
-                <p class="price">$ 5000</p><button class="btn-add-cart" data-title="Limpido Multiusos 3lt" data-price="5000">Añadir al carrito</button>
-            </div>
+                <p class="price">$ 5000</p><button class="btn-add-cart">Añadir al carrito</button></div>
         </div>
     </div>
     <footer class="footer container">
@@ -137,23 +130,49 @@
                     <a href="#"></a>
                 </li>
             </ul>
-        </div>
-
-        <div class="link">
-            <h3>Contacto</h3>
-            <ul>
-                <li><a href="#">Dirección: Centro de Comercio y Turismo REGIONAL QUINDIO</a></li>
-                <li><a href="tel:+123456789">Teléfono: +57 313809989 +57 305 8747370</a></li>
-                <li><a href="mailto:avillarreal55@sena.edu.co">Correo: info@minimarket.com</a></li>
-                <li><a href="#">Horarios: Lun - Vie: 8am - 8pm</a></li>
             </ul>
         </div>
-
+        <div class="link">
+            <h3>Consejos de Aseo</h3>
+            <ul>
+                <li><a href="#">Los productos biodegradables son mejores para el medio ambiente.</a></li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </div>
+        <div class="link">
+            <h3></h3>
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+            </ul>
+        </div>
+        <div class="link">
+            <h3></h3>
+            <ul>
+                <ul>
+                    <li><a href="#">.</a></li>
+                    <li>
+                        <a href="#"></a>
+                    </li>
+                    <li><a href="#">Adopta la regla de las tres R's: Reduzca el uso de quimicos utilizzando la cantidad adecuada, no desperdicie el producto</a></li>
+                </ul>
+        </div>
     </footer>
-
-    <script src="js/script.js"></script>
-    <script src="js/index.js"></script>
-
+    <script src="./carrito-script.js/script.js"></script>
+    <script src="./js/index.js"></script>
+    <script src="https://sdk.mercadopago.com/js/v2"></script>
 </body>
 
 </html>
