--- a/empaques.html
+++ b/empaques.html
@@ -33,22 +33,26 @@
                     <li><a href="homepage.html">Inicio</a></li>
                     <li><a href="aseo-index.html">Aseo</a></li>
                     <li><a href="mascotas-index.html">Mascotas</a></li>
-                    <li><a href="mercado-index.html">Mercado</a></li>
+                    <li>
+                        <a href="mercado-index.html">Mercado</a>
+                    </li>
                     <li><a href="panaderia-index.html">Panaderia</a></li>
                     <li><a href="papeleria-index.html">Papelería</a></li>
                     <button id="logout">Cerrar Sesión</button>
+
+
                 </ul>
             </nav>
 
             <div class="container-icon">
                 <div class="container-cart-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-cart">
-                        <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
-                        />
-                    </svg>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
+						/>
+					</svg>
                     <div class="count-products">
                         <span id="contador-productos">0</span>
                     </div>
@@ -63,24 +67,27 @@
                                 <span class="precio-producto-carrito">$80</span>
                             </div>
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close">
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    d="M6 18L18 6M6 6l12 12"
-                                />
-                            </svg>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									d="M6 18L18 6M6 6l12 12"
+								/>
+							</svg>
                         </div>
                     </div>
 
                     <div class="cart-total hidden">
                         <h3>Total:</h3>
                         <span class="total-pagar">$200</span>
-                        <button class="btn-primary" id="checkout-btn">Ir a pagar</button>
                     </div>
                     <p class="cart-empty">El carrito está vacío</p>
                 </div>
             </div>
+
+
         </div>
+
+
     </header>
 
     <div class="container-items">
@@ -91,7 +98,7 @@
             <div class="info-product">
                 <h2>Blonda Dorada 32 cm x10 und</h2>
                 <p class="price">$ 30000</p>
-                <button class="btn-add-cart" data-title="Blonda Dorada 32 cm x10 und" data-price="30000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -101,7 +108,7 @@
             <div class="info-product">
                 <h2>bolsa Para Basura ref 30 x 50 und</h2>
                 <p class="price">$ 20000</p>
-                <button class="btn-add-cart" data-title="bolsa Para Basura ref 30 x 50 und" data-price="20000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -111,7 +118,7 @@
             <div class="info-product">
                 <h2>Bolsa Transparente Ref 6x11 kilo</h2>
                 <p class="price">$ 15000</p>
-                <button class="btn-add-cart" data-title="Bolsa Transparente Ref 6x11 kilo" data-price="15000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -121,7 +128,7 @@
             <div class="info-product">
                 <h2>Caja Para Torta 30 cm x 10 und</h2>
                 <p class="price">$ 18000</p>
-                <button class="btn-add-cart" data-title="Caja Para Torta 30 cm x 10 und" data-price="18000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -131,7 +138,7 @@
             <div class="info-product">
                 <h2>Porta Comidas j-1 x200 und</h2>
                 <p class="price">$ 53000</p>
-                <button class="btn-add-cart" data-title="Porta Comidas j-1 x200 und" data-price="53000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -141,7 +148,7 @@
             <div class="info-product">
                 <h2>Bolsa Aluminio Ref L-19 x100 und</h2>
                 <p class="price">$ 2500</p>
-                <button class="btn-add-cart" data-title="Bolsa Aluminio Ref L-19 x100 und" data-price="2500">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -151,7 +158,7 @@
             <div class="info-product">
                 <h2>Loma industrial x10 und</h2>
                 <p class="price">$ 50000</p>
-                <button class="btn-add-cart" data-title="Loma industrial x10 und" data-price="50000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -161,8 +168,168 @@
             <div class="info-product">
                 <h2>Malla Para Verduras x1000 mtr</h2>
                 <p class="price">$ 100000</p>
-                <button class="btn-add-cart" data-title="Malla Para Verduras x1000 mtr" data-price="100000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
-            <figure
+            <figure>
+                <img src="images/mezclador.PNG" alt="producto" />
+            </figure>
+            <div class="info-product">
+                <h2>Mezclador kikos x150 und</h2>
+                <p class="price">$ 2000</p>
+                <button class="btn-add-cart">Añadir al carrito</button>
+            </div>
+        </div>
+        <div class="item">
+            <figure>
+                <img src="images/molde aluminio cuadrado.PNG" alt="producto" />
+            </figure>
+            <div class="info-product">
+                <h2>Molde Aluminio Rectangular Ref 100 und</h2>
+                <p class="price">$ 10000</p>
+                <button class="btn-add-cart">Añadir al carrito</button>
+            </div>
+        </div>
+        <div class="item">
+            <figure>
+                <img src="images/molde aluminio redondo.PNG" alt="producto" />
+            </figure>
+            <div class="info-product">
+                <h2>Molde Aluminio Redondo Ref 45 onz und</h2>
+                <p class="price">$ 3000</p>
+                <button class="btn-add-cart">Añadir al carrito</button>
+            </div>
+        </div>
+        <div class="item">
+            <figure>
+                <img src="images/nevera.PNG" alt="producto" />
+            </figure>
+            <div class="info-product">
+                <h2>Nevera Icopor 20 litros</h2>
+                <p class="price">$ 15000</p>
+                <button class="btn-add-cart">Añadir al carrito</button>
+            </div>
+        </div>
+        <div class="item">
+            <figure>
+                <img src="images/pitillos.PNG" alt="producto" />
+            </figure>
+            <div class="info-product">
+                <h2>Pitillo Empaque Individual pqt</h2>
+                <p class="price">$ 10000</p>
+                <button class="btn-add-cart">Añadir al carrito</button>
+            </div>
+        </div>
+        <div class="item">
+            <figure>
+                <img src="images/plato15.5.PNG" alt="producto" />
+            </figure>
+            <div class="info-product">
+                <h2>Plato Redondo 15.5 cm</h2>
+                <p class="price">$ 2000</p>
+                <button class="btn-add-cart">Añadir al carrito</button>
+            </div>
+        </div>
+
+    </div>
+
+    <footer class="footer container">
+        <div class="link">
+            <h3></h3>
+
+            <ul>
+                <li><a href="#">.</a></li>
+                <li><a href="#">Opta por cajas y bolsas reciclables</a></li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
+            </ul>
+
+
+        </div>
+
+        <div class="link">
+            <h3></h3>
+
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
+            </ul>
+
+
+        </div>
+
+        <div class="link">
+            <h3>Cuidado del Medio Ambiente</h3>
+
+            <ul>
+                <li><a href="#">Adopta la regla de las tres R's: Reducir, Reutilizar, Reciclar</a></li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
+            </ul>
+
+
+        </div>
+
+
+
+        <div class="link">
+            <h3></h3>
+
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
+            </ul>
+
+
+        </div>
+
+        <div class="link">
+            <h3></h3>
+
+            <ul>
+                <li><a href="#">.</a></li>
+                <li>
+                    <a href="#">En lo posible trae tus bolsas para llevar tus productos</a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
+            </ul>
+
+
+        </div>
+
+    </footer>
+
+
+
+    <script src="./carrito-script.js/script.js"></script>
+    <script src="./js/index.js"></script>
+</body>
+
+</html>
