--- a/mascotas-index.html
+++ b/mascotas-index.html
@@ -37,17 +37,19 @@
                     <li><a href="panaderia-index.html">Panaderia</a></li>
                     <li><a href="papeleria-index.html">Papelería</a></li>
                     <li><button id="logout">Cerrar Sesión</button></li>
+
+
             </nav>
 
             <div class="container-icon">
                 <div class="container-cart-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-cart">
-                        <path
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
-                        />
-                    </svg>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
+						/>
+					</svg>
                     <div class="count-products">
                         <span id="contador-productos">0</span>
                     </div>
@@ -62,24 +64,27 @@
                                 <span class="precio-producto-carrito">$80</span>
                             </div>
                             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="icon-close">
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    d="M6 18L18 6M6 6l12 12"
-                                />
-                            </svg>
+								<path
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									d="M6 18L18 6M6 6l12 12"
+								/>
+							</svg>
                         </div>
                     </div>
 
                     <div class="cart-total hidden">
                         <h3>Total:</h3>
                         <span class="total-pagar">$200</span>
-                        <button class="btn-primary" id="checkout-btn">Ir a pagar</button>
                     </div>
                     <p class="cart-empty">El carrito está vacío</p>
                 </div>
             </div>
+
+
         </div>
+
+
     </header>
 
     <div class="container-items">
@@ -90,7 +95,7 @@
             <div class="info-product">
                 <h2>Mirringo Gato Adulto 1 kilo</h2>
                 <p class="price">$ 10000</p>
-                <button class="btn-add-cart" data-title="Mirringo Gato Adulto 1 kilo" data-price="10000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -100,7 +105,7 @@
             <div class="info-product">
                 <h2>Monello Adulto Raza Pequeña 1 kilo</h2>
                 <p class="price">$ 18000</p>
-                <button class="btn-add-cart" data-title="Monello Adulto Raza Pequeña 1 kilo" data-price="18000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -110,7 +115,7 @@
             <div class="info-product">
                 <h2>Eliminador De Pulgas Puloff</h2>
                 <p class="price">$ 8000</p>
-                <button class="btn-add-cart" data-title="Eliminador De Pulgas Puloff" data-price="8000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -118,9 +123,9 @@
                 <img src="images/puloff perro.PNG" alt="producto" />
             </figure>
             <div class="info-product">
-                <h2>Eliminador De Pulgas Puloff</h2>
+                <h2>Eliminador De ÇPulgas Puloff</h2>
                 <p class="price">$ 8000</p>
-                <button class="btn-add-cart" data-title="Eliminador De Pulgas Puloff" data-price="8000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -130,7 +135,7 @@
             <div class="info-product">
                 <h2>Chunky Gaticos 1.5 kilos</h2>
                 <p class="price">$ 20000</p>
-                <button class="btn-add-cart" data-title="Chunky Gaticos 1.5 kilos" data-price="20000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -140,22 +145,30 @@
             <div class="info-product">
                 <h2>Chunky Adulto Raza Pequeña 8 kilos </h2>
                 <p class="price">$ 90000</p>
-                <button class="btn-add-cart" data-title="Chunky Adulto Raza Pequeña 8 kilos" data-price="90000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
+
+
     </div>
 
     <footer class="footer container">
         <div class="link">
             <h3></h3>
+
             <ul>
                 <li><a href="#">.</a></li>
                 <li><a href="#">Cepilla regularmente el pelaje de tu mascota para prevenir enredos y reducir la caída de pelo. Baña a tu mascota según sea necesario y mantén limpios sus oídos y dientes</a></li>
                 <li><a href="#">l</a></li>
+
             </ul>
+
+
         </div>
+
         <div class="link">
             <h3></h3>
+
             <ul>
                 <li>
                     <a href="#"></a>
@@ -166,10 +179,15 @@
                 <li>
                     <a href="#"></a>
                 </li>
+
             </ul>
+
+
         </div>
+
         <div class="link">
             <h3>Consejos para Mascotas</h3>
+
             <ul>
                 <li><a href="#">Proporciona una dieta equilibrada para tu mascota.</a></li>
                 <li>
@@ -178,23 +196,58 @@
                 <li>
                     <a href="#"></a>
                 </li>
+
             </ul>
+
+
+        </div>
+
+
+
+        <div class="link">
+            <h3></h3>
+
+            <ul>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
+            </ul>
+
+
         </div>
 
         <div class="link">
-            <h3>Contacto</h3>
+            <h3>.</h3>
+
             <ul>
-                <li><a href="#">Dirección: Centro de Comercio y Turismo REGIONAL QUINDIO</a></li>
-                <li><a href="tel:+123456789">Teléfono: +57 313809989 +57 305 8747370</a></li>
-                <li><a href="mailto:avillarreal55@sena.edu.co">Correo: info@minimarket.com</a></li>
-                <li><a href="#">Horarios: Lun - Vie: 8am - 8pm</a></li>
+                <li>
+                    <a href="#">Proporciona a tu mascota una dieta equilibrada y adecuada para su edad, tamaño y nivel de actividad. Consulta a tu veterinario para recomendaciones específicas</a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+                <li>
+                    <a href="#"></a>
+                </li>
+
             </ul>
+
+
         </div>
 
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/index.js"></script>
+
+
+    <script src="/carrito-script.js/script.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
