--- a/panaderia-index.html
+++ b/panaderia-index.html
@@ -72,7 +72,6 @@
                     <div class="cart-total hidden">
                         <h3>Total:</h3>
                         <span class="total-pagar">$200</span>
-                        <button class="btn-primary" id="checkout-btn">Ir a pagar</button>
                     </div>
                     <p class="cart-empty">El carrito está vacío</p>
                 </div>
@@ -88,7 +87,7 @@
             <div class="info-product">
                 <h2>Croissant Frances und</h2>
                 <p class="price">$ 3000</p>
-                <button class="btn-add-cart" data-title="Croissant Frances und" data-price="3000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -98,7 +97,7 @@
             <div class="info-product">
                 <h2>Galletas De Avena x5und</h2>
                 <p class="price">$ 4500</p>
-                <button class="btn-add-cart" data-title="Galletas De Avena x5und" data-price="4500">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -108,7 +107,7 @@
             <div class="info-product">
                 <h2>Galletas Ducales 3 Tacos</h2>
                 <p class="price">$ 9900</p>
-                <button class="btn-add-cart" data-title="Galletas Ducales 3 Tacos" data-price="9900">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -118,7 +117,7 @@
             <div class="info-product">
                 <h2>Mogolla Leche x10 und</h2>
                 <p class="price">$ 5000</p>
-                <button class="btn-add-cart" data-title="Mogolla Leche x10 und" data-price="5000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
         <div class="item">
@@ -128,10 +127,11 @@
             <div class="info-product">
                 <h2>Pan Tajado Bimbo Familiar </h2>
                 <p class="price">$ 8000</p>
-                <button class="btn-add-cart" data-title="Pan Tajado Bimbo Familiar" data-price="8000">Añadir al carrito</button>
+                <button class="btn-add-cart">Añadir al carrito</button>
             </div>
         </div>
     </div>
+
     <section class="blog">
         <h2>Blog del Minimarket</h2>
         <article>
@@ -150,22 +150,34 @@
             <h3>Preparación de Café de Baristas</h3>
             <p>Aprende a preparar el café perfecto en casa con nuestras guías paso a paso y entrevistas con expertos baristas.</p>
         </article>
+        <article>
+            <h3>Transición hacia la Agroindustria Alimentaria</h3>
+            <p>Conoce nuestras iniciativas para integrar la agroindustria y apoyar prácticas agrícolas sostenibles y ecológicas.</p>
+        </article>
     </section>
 
     <footer class="footer container">
         <div class="link">
             <h3>Contacto</h3>
             <ul>
-                <li><a href="#">Dirección: Centro de Comercio y Turismo REGIONAL QUINDIO</a></li>
-                <li><a href="tel:+123456789">Teléfono: +57 313809989 +57 305 8747370</a></li>
-                <li><a href="mailto:avillarreal55@sena.edu.co">Correo: info@minimarket.com</a></li>
+                <li><a href="#">Dirección: Calle Falsa 123</a></li>
+                <li><a href="tel:+123456789">Teléfono: +123 456 789</a></li>
+                <li><a href="mailto:info@minimarket.com">Correo: info@minimarket.com</a></li>
                 <li><a href="#">Horarios: Lun - Vie: 8am - 8pm</a></li>
             </ul>
         </div>
+        <div class="link">
+            <h3>Enlaces Rápidos</h3>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+         [_{{{CITATION{{{_1{](https://github.com/bgoonz/web-dev-utils-package/tree/65a7b21c0444f4cbeb3c313a750fb43560047e77/personal-utilities%2Fcopy-2-clip%2FREADME.md)[_{{{CITATION{{{_2{](https://github.com/osmiguel/Proyectos_php/tree/11d18aa01dc4d1fbadc50613eb318b8f0567d931/index.php)[_{{{CITATION{{{_3{](https://github.com/luizsetten/php-market/tree/fd1b0a8df81a73c9258f5b99a2b0733a78a09496/editar.php)
+
+        </div>
     </footer>
 
-    <script src="js/script.js"></script>
-    <script src="js/index.js"></script>
+    <script src="/carrito-script.js/script.js"></script>
+    <script src="./js/index.js"></script>
 
 </body>
 
