--- a/papeleria-index.html
+++ b/papeleria-index.html
@@ -298,7 +298,7 @@
 
 
 
-    <script src="./js/script.js"></script>
+    <script src="/carrito-script.js/script.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
